# nexthub

./: .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  drizzle.config.ts  fix_batch_trpc.py  fix_face_compose.py  fix_face_imports.py  fix_face_main.py  fix_face_trpc.py  fix_ninauth_trpc.py  fix_partner_main.py  fix_qdrant_compose.py  fix_tb_integration.py  fix_ts_errors.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: ci.yml  dependabot.yml
client/: index.html
client/src/: App.tsx
client/src/components/: Layout.tsx
client/src/components/nexthub/: NqrGenerator.tsx  NqrScanner.tsx  VirtualTransferList.tsx
client/src/components/ui/: chart.tsx  pagination-controls.tsx  resizable.tsx
client/src/hooks/: use-toast.ts  useComposition.ts  useMobile.ts
client/src/lib/: trpc.ts
client/src/lib/theming/: ThemeProvider.tsx
client/src/pages/admin/: RegulatorManagement.tsx
client/src/pages/nexthub/: BillingHub.tsx  BulkTransferWizard.tsx  BulkTransfers.tsx  DFSPManagement.tsx  DFSPTopologyMap.tsx  DisputeArbitrationTribunal.tsx  DisputesHub.tsx  FXDashboard.tsx  NDCPositionLimitEditor.tsx  NdcBreachEvents.tsx  OracleManagement.tsx  PISPConsents.tsx  ParticipantLifecycle.tsx  ReconciliationExceptions.tsx  SecurityDashboard.tsx  SettlementBankManagement.tsx  SettlementWindows.tsx  Wave230Security.tsx  Wave240Workflows.tsx  Wave250Liquidity.tsx  Wave260Domains.tsx
client/src/pages/regulator/: RegulatorDashboard.tsx  RegulatorLogin.tsx  RegulatorVerify.tsx
drizzle/: national_switch_schema.ts  nexthub_relations.ts  nexthub_schema.ts  nqr_schema.ts  performance_indexes.ts  schema.ts  tenant_schema.ts
drizzle/migrations/: 0000_harsh_wallflower.sql
drizzle/migrations/meta/: 0000_snapshot.json  _journal.json
infra/k8s/base/: autoscaling.yaml  kafka-ha.yaml  microservices-deployment.yaml  national-switch-services.yaml  nexthub-core-deployment.yaml  postgres-ha.yaml  redis-sentinel-ha.yaml
infra/k8s/overlays/eg-prod/: kustomization.yaml
infra/k8s/overlays/gh-prod/: kustomization.yaml
infra/k8s/overlays/ke-prod/: kustomization.yaml
infra/k8s/overlays/ng-prod/: ingress.yaml  kustomization.yaml
infra/k8s/overlays/za-prod/: kustomization.yaml
proto/: nexthub.proto
sdk/typescript/: nexthub-sdk.ts
server/: backgroundJobs.ts  cache.ts  circuitBreaker.ts  db.ts  grpcHealthServer.ts  grpcServer.ts  integrationApi.ts  logger.ts  middlewareBridge.ts  mojaloopClient.ts  ndcBreachStream.ts  permifyClient.ts  routers.ts  storage.ts  tenantMiddleware.ts
server/_core/: context.ts  cookies.ts  env.ts  fxSseRegistry.ts  index.ts  keycloak.ts  trpc.ts
server/db/: index.ts  nexthubRepository.ts  preparedStatements.ts  queryHelpers.ts  schemaValidators.ts
server/fluvio/: nexthubFluvioConsumer.ts  nexthubFluvioProducer.ts
server/kafka/: nexthubKafkaConsumer.ts  nexthubKafkaProducer.ts
server/nibss/: nibssGateway.ts  nqrService.ts
server/routers/: keycloak.ts  nexthubArbitration.ts  nexthubBilling.ts  nexthubBulkTransfers.ts  nexthubDfsps.ts  nexthubDisputes.ts  nexthubFX.ts  nexthubHsm.ts  nexthubIdentityDirectory.ts  nexthubLiquidity.ts  nexthubOracles.ts  nexthubPISP.ts  nexthubParticipants.ts  nexthubReconciliation.ts  nexthubSecurity.ts  nexthubSettlement.ts  nexthubTenants.ts  nibssNip.ts  wave221_developer.ts  wave223_extensions.ts  wave223_onboarding.ts  wave224_regulator.ts  wave225_regulator_auth.ts  wave226_admin_regulators.ts  wave227.ts  wave230_security.ts  wave240_workflows.ts  wave250_liquidity.ts  wave260_domains.ts
server/wave230/: hsm.ts  middleware.ts  mtls.ts
services/biometric-verifier/: main.py  requirements.txt
services/branding-compiler/: Cargo.toml
services/branding-compiler/src/: main.rs
services/bridge/: Dockerfile  go.mod  go.sum
services/bridge/cmd/: main.go
services/bridge/internal/biasaudit/: client.go
services/bridge/internal/caddy/: client.go
services/bridge/internal/config/: config.go
services/bridge/internal/facebiometric/: client.go
services/bridge/internal/handlers/: bias_audit_handlers.go  caddy_handlers.go  face_handlers.go  fidelity_handlers.go  handlers.go  infra_handlers.go  keycloak_handlers.go  mosip_handlers.go  nexthub_ledger.go  ninauth_handlers.go  partner_face_handlers.go
services/bridge/internal/kafka/: producer.go
services/bridge/internal/keycloak/: client.go
services/bridge/internal/ledger/: tigerbeetle.go
services/bridge/internal/middleware/: auth.go  partner_auth.go
services/bridge/internal/mosip/: client.go  registration.go
services/bridge/internal/permify/: client.go
services/bridge/internal/temporal/: worker.go
services/caddy/: Dockerfile
services/caddy/config/: Caddyfile  caddy.env.example  entrypoint.sh  openappsec.policy
services/cb-liquidity-adapter/: go.mod
services/cb-liquidity-adapter/cmd/: main.go
services/dispute-arbitration/: go.mod
services/dispute-arbitration/cmd/: main.go
services/dispute-arbitration/ml-scorer/: main.py
services/face-bias-audit/: Cargo.toml  Dockerfile
services/face-bias-audit/src/: main.rs
services/face-biometric/: Dockerfile  README.md  download_models.py  main.py  quality_engine.py  requirements.txt
services/hsm-adapter/: go.mod
services/hsm-adapter/cmd/: main.go
services/hsm-mac-lib/: Cargo.toml
services/hsm-mac-lib/src/: lib.rs
services/identity-directory/: Cargo.toml  deny.toml
services/identity-directory/src/: alias.rs  cache.rs  db.rs  grpc.rs  kafka.rs  main.rs  models.rs
services/keycloak/: init-keycloak.sh
services/keycloak/realms/: nexthub-realm.json
services/lakehouse/: Dockerfile  main.py
services/ledger/: Cargo.toml  Dockerfile
services/ledger/src/: main.rs
services/tenant-analytics/: main.py  requirements.txt
services/tenant-provisioning/: go.mod  main.go
services/ussd-gateway/: go.mod
services/ussd-gateway/cmd/: main.go
shared/: const.ts
tests/go/: go.mod  smoke_test.go
tests/python/: smoke_test_all_workflows.py  test_unit_all_workflows.py
tests/rust/: Cargo.toml  smoke_test.rs
tests/typescript/: smoke_test.ts
(+8 files in other folders)
