[package]
name = "branding-compiler"
version = "1.0.0"
edition = "2021"
description = "NextHub per-tenant CSS branding compiler with WCAG contrast validation"
authors = ["NextHub Platform Team"]

[[bin]]
name = "branding-compiler"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
