[package]
name        = "face-bias-audit"
version     = "1.0.0"
edition     = "2021"
description = "NextHub face biometric demographic bias audit engine (Rust)"

[[bin]]
name = "face-bias-audit"
path = "src/main.rs"

[[test]]
name = "smoke_test"
path = "tests/smoke_test.rs"

[dependencies]
# Web framework
axum            = { version = "0.7",  features = ["json", "macros"] }
tokio           = { version = "1",    features = ["full"] }
tower           = { version = "0.4" }
tower-http      = { version = "0.5",  features = ["cors", "trace"] }

# Serialization
serde           = { version = "1",    features = ["derive"] }
serde_json      = "1"

# Database (PostgreSQL via sqlx)
sqlx            = { version = "0.7",  features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis (for real-time counters)
redis           = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Kafka
rdkafka         = { version = "0.36", features = ["cmake-build"] }

# UUID and time
uuid            = { version = "1",    features = ["v4", "serde"] }
chrono          = { version = "0.4",  features = ["serde"] }

# Metrics
prometheus      = { version = "0.14", features = ["process"] }

# Logging
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow          = "1"
thiserror       = "2"

# Config
dotenvy         = "0.15"

# HTTP client (for forwarding to Python service)
reqwest         = { version = "0.13", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
# Blocking HTTP client for integration smoke tests (reqwest blocking feature)
reqwest         = { version = "0.13", features = ["json", "blocking", "rustls-tls"], default-features = false }

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1
panic           = "abort"
