[package]
name = "hsm-mac-lib"
version = "0.1.0"
edition = "2021"
description = "Rust HSM MAC/signature offload library for NextHub NIP gateway"

[lib]
name = "hsm_mac"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ring = "0.17"

# PKCS#11 bindings
cryptoki = { version = "0.7", features = ["generate-bindings"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# FFI
libc = "0.2"
