[package]
name = "identity-directory"
version = "0.1.0"
edition = "2021"
description = "NextHub National Identity Directory (DICT) — High-performance alias resolution engine"

[[bin]]
name = "identity-directory"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# HTTP server
axum = { version = "0.8", features = ["json", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"

# Database — upgraded from 0.7 to fix RUSTSEC-2024-0363 (binary protocol misinterpretation)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (for alias hashing and HMAC verification)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"

# UUID and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

[build-dependencies]
tonic-build = "0.12"

