[package]
name = "nexthub-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
anyhow = "1.0.103"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.23.4"
